--- a/contact.html
+++ b/contact.html
@@ -2,24 +2,23 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="Stylesheet" href="style.css" type="text/css">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <title>Contact</title>
     </head>
-    <body>
+    <body class="bg-dark">
+        <header class="">
+            <div class="d-flex justify-content-center">
+                <h1 class="bg-dark text-light">Johnny Li</h1>
+            </div>
+        </header>
+        <nav class="nav navbar-light bg-light justify-content-center"> 
+            <a class="nav-link text-dark" href="index.html">About Me</a>
+            <a class="nav-link text-dark" href="portfolio.html">Portfolio</a>
+            <a class="nav-link text-dark" href="contact.html">Contact</a>
+        </nav>
         <main class="container">
-            <header class="row">
-                <div class="col-lg-12 d-flex justify-content-center">
-                    <h1 class="bg-light text-dark">Johnny Li</h1>
-                </div>
-            </header>
-            <nav class="nav navbar-light bg-dark justify-content-center"> 
-                <a class="nav-link text-light" href="index.html">About Me</a>
-                <a class="nav-link text-light" href="portfolio.html">Portfolio</a>
-                <a class="nav-link text-light" href="contact.html">Contact</a>
-            </nav>
             <article>
                 <section class="card mt-4"><!-- class="container"-->
                     <div class="card-body">
