--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <title>About Me</title>
     </head>
-    <body>
+    <body class="bg-dark">
+        <header class="">
+            <div class="d-flex justify-content-center">
+                <h1 class="bg-dark text-light">Johnny Li</h1>
+            </div>
+        </header>
+        <nav class="nav navbar-light bg-light justify-content-center"> 
+            <a class="nav-link text-dark" href="index.html">About Me</a>
+            <a class="nav-link text-dark" href="portfolio.html">Portfolio</a>
+            <a class="nav-link text-dark" href="contact.html">Contact</a>
+        </nav>
         <main class="container">
-            <header class="row">
-                <div class="col-lg-12 d-flex justify-content-center">
-                    <h1 class="bg-light text-dark">Johnny Li</h1>
-                </div>
-            </header>
-            <nav class="nav navbar-light bg-dark justify-content-center"> 
-                <a class="nav-link text-light" href="index.html">About Me</a>
-                <a class="nav-link text-light" href="portfolio.html">Portfolio</a>
-                <a class="nav-link text-light" href="contact.html">Contact</a>
-            </nav>
             <article>
                 <section class="card mt-4">
                     <div class="card-body">
