replace placeholders with actual images and project names

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,34 +35,38 @@
                                         <div class="row">
                                             
                                                 <div class="col-lg-4 mb-5">
-                                                    <img src="https://placehold.it/160x90" class="card-img-top" alt="screenshot">
+                                                    <img src="Assets/Images/cvstimcalc.png" class="card-img-top" alt="screenshot">
                                                     <div class="card-body bg-dark">
-                                                        <a href="#" class="stretched-link">
-                                                            <h3 class="card-title text-light">Project</h3>
+                                                        <a href="https://reptile18.github.io/CVStimCalc/" class="stretched-link">
+                                                            <h3 class="card-title text-light">StimulusCalculator</h3>
+                                                            <h4 class="card-subtitle text-light">Bootstrap Web App</h4>
                                                         </a>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-4 mb-5">
-                                                    <img src="https://placehold.it/160x90" class="card-img-top" alt="screenshot">
+                                                    <img src="Assets/Images/Tom_the_Vegetarian_480x270.png" class="card-img-top" alt="screenshot">
                                                     <div class="card-body bg-dark">
-                                                        <a href="#" class="stretched-link">
-                                                            <h3 class="card-title text-light">Project</h3>
+                                                        <a href="https://johnnysdabblings.code.blog/category/tom-the-vegetarian/" class="stretched-link">
+                                                            <h3 class="card-title text-light">Tom the Vegetarian</h3>
+                                                            <h4 class="card-subtitle text-light">Mobile Game</h4>
                                                         </a>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-4 mb-5">
-                                                    <img src="https://placehold.it/160x90" class="card-img-top" alt="screenshot">
+                                                    <img src="Assets/Images/Redshift_50_perc.png" class="card-img-top" alt="screenshot">
                                                     <div class="card-body bg-dark">
                                                         <a href="#" class="stretched-link">
-                                                            <h3 class="card-title text-light">Project</h3>
+                                                            <h3 class="card-title text-light">Redshift</h3>
+                                                            <h4 class="card-subtitle text-light">Mobile Game</h4>
                                                         </a>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-4 mb-5">
-                                                    <img src="https://placehold.it/160x90" class="card-img-top" alt="screenshot">
+                                                    <img src="Assets/Images/pottedplant.png" class="card-img-top" alt="screenshot">
                                                     <div class="card-body bg-dark">
-                                                        <a href="#" class="stretched-link">
-                                                            <h3 class="card-title text-light">Project</h3>
+                                                        <a href="https://github.com/reptile18/PythonDjangoReactDemo" class="stretched-link">
+                                                            <h3 class="card-title text-light">React Demo</h3>
+                                                            <h4 class="card-subtitle text-light">Python React Web App</h4>
                                                         </a>
                                                     </div>
                                                 </div>
