--- a/index.html
+++ b/index.html
@@ -19,29 +19,27 @@
             <a class="nav-link text-dark" href="contact.html">Contact</a>
         </nav>
         <main class="container">
-            <article>
-                <section class="card mt-4">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <h2 class="text-dark card-title">About Me</h2>
-                                <hr>
-                            </div>
+            <article class="card mt-4">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h2 class="text-dark card-title">About Me</h2>
+                            <hr>
                         </div>
-                        <div class="row">
-                            <div class="col-lg-12 d-flex justify-content-center">
-                                <img src="Assets/Images/portrait.jpg" class="img-fluid" alt="my photo">
-                            </div>
-                            <div class="mt-3 col-lg-12 text-dark">
-                                I'm a software developer. I'm fluent in HTML/CSS, Javascript, Intersystems Caché, VB6, and GDScript. My education was mostly in Java with some C++ and Python thrown in. 
-                            </div>
-                            <div class="mt-3 col-lg-12 text-dark">
-                                I'm gay, vegan, and a board game enthusiast. 
-                            </div>
-                        </div>
-                        
                     </div>
-                </section>
+                    <div class="row">
+                        <div class="col-lg-12 d-flex justify-content-center">
+                            <img src="Assets/Images/portrait.jpg" class="img-fluid" alt="my photo">
+                        </div>
+                        <div class="mt-3 col-lg-12 text-dark">
+                            I'm a software developer. I'm fluent in HTML/CSS, Javascript, Intersystems Caché, VB6, and GDScript. My education was mostly in Java with some C++ and Python thrown in. 
+                        </div>
+                        <div class="mt-3 col-lg-12 text-dark">
+                            I'm gay, vegan, and a board game enthusiast. 
+                        </div>
+                    </div>
+                    
+                </div>
             </article>
         </main>
     </body>
