--- a/contact.html
+++ b/contact.html
@@ -19,44 +19,41 @@
             <a class="nav-link text-dark" href="contact.html">Contact</a>
         </nav>
         <main class="container">
-            <article>
-                <section class="card mt-4"><!-- class="container"-->
-                    <div class="card-body">
-                        <div class="row"> 
+            <article class="card mt-4">
+                <div class="card-body">
+                    <div class="row"> 
+                        <div class="col-lg-12">
+                            <h2 class="text-dark card-title">Contact</h2>
+                            <hr>
+                        </div>
+                    </div>
+                    <form>
+                        <div class="row form-group">
                             <div class="col-lg-12">
-                                <h2 class="text-dark card-title">Contact</h2>
-                                <hr>
+                                <label for="inName">Name</label>
+                                <input type="text" class="form-control" id="inName" placeholder="John Smith">
                             </div>
                         </div>
-                        <form>
-                            <div class="row form-group">
-                                <div class="col-lg-12">
-                                    <label for="inName">Name</label>
-                                    <input type="text" class="form-control" id="inName" placeholder="John Smith">
-                                </div>
+                        <div class="row form-group">
+                            <div class="col-lg-12">
+                                <label for="inEmail">Email</label>
+                                <input type="email" class="form-control" id="inEmail" aria-describedby="emailHelp" placeholder="example@gmail.com">
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                             </div>
-                            <div class="row form-group">
-                                <div class="col-lg-12">
-                                    <label for="inEmail">Email</label>
-                                    <input type="email" class="form-control" id="inEmail" aria-describedby="emailHelp" placeholder="example@gmail.com">
-                                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                                </div>
+                        </div>
+                        <div class="row form-group">
+                            <div class="col-lg-12">
+                                <label for="inMessage">Message</label>
+                                <textarea class="form-control" id="inMessage"></textarea>
                             </div>
-                            <div class="row form-group">
-                                <div class="col-lg-12">
-                                    <label for="inMessage">Message</label>
-                                    <textarea class="form-control" id="inMessage"></textarea>
-                                </div>
+                        </div>
+                        <div class="row form-group">
+                            <div class="col-lg-12">
+                                <input class="btn btn-primary" type="submit" value="Submit">
                             </div>
-                            <div class="row form-group">
-                                <div class="col-lg-12">
-                                    <input class="btn btn-primary" type="submit" value="Submit">
-                                </div>
-                            </div>
-
-                        </form>
-                    </div>
-                </section>
+                        </div>
+                    </form>
+                </div>
             </article>
         </main>
     </body>
