--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
         <title>Contact</title>
     </head>
     <body class="bg-dark">
-        <header class="">
+        <header>
             <div class="d-flex justify-content-center">
                 <h1 class="bg-dark text-light">Johnny Li</h1>
             </div>
@@ -56,5 +56,8 @@
                 </div>
             </article>
         </main>
+        <footer class="fixed-bottom page-footer bg-light text-dark font-small ">
+            <div class="footer-copyright text-center py-3">© Copyright</div>
+        </footer>
     </body>
 </html>
