add links to social, real content in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="./style.css">
         <title>Portfolio</title>
     </head>
     <body class="bg-dark">
@@ -32,7 +33,34 @@
                             <div class="container">
                                 <div class="row">
                                     
-                                        <div class="col-lg-4 mb-5">
+                                    <div class="col-lg-4 mb-5">
+                                        <img src="Assets/Images/purplepages.png" class="card-img-top" alt="screenshot">
+                                        <div class="card-body bg-dark">
+                                            <a href="https://reptile18.github.io/Purple-Pages/index.html" class="stretched-link">
+                                                <h3 class="card-title text-light">Purple Pages</h3>
+                                                <h4 class="card-subtitle text-light">Web Entertainment App</h4>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 mb-5">
+                                        <img src="Assets/Images/workdayscheduler.png" class="card-img-top border" alt="screenshot">
+                                        <div class="card-body bg-dark">
+                                            <a href="https://reptile18.github.io/Work-Day-Scheduler/Develop/index.html" class="stretched-link">
+                                                <h3 class="card-title text-light">Work Day Scheduler</h3>
+                                                <h4 class="card-subtitle text-light">Time Keeping App</h4>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 mb-5">
+                                        <img src="Assets/Images/weatherdashboard.png" class="card-img-top" alt="screenshot">
+                                        <div class="card-body bg-dark">
+                                            <a href="https://reptile18.github.io/Weather-Dashboard/" class="stretched-link">
+                                                <h3 class="card-title text-light">Weather Dashboard</h3>
+                                                <h4 class="card-subtitle text-light">Local Weather App</h4>
+                                            </a>
+                                        </div>
+                                    </div>
+                                        <!--<div class="col-lg-4 mb-5">
                                             <img src="Assets/Images/cvstimcalc.png" class="card-img-top" alt="screenshot">
                                             <div class="card-body bg-dark">
                                                 <a href="https://reptile18.github.io/CVStimCalc/" class="stretched-link">
@@ -67,7 +95,7 @@
                                                     <h4 class="card-subtitle text-light">Python React Web App</h4>
                                                 </a>
                                             </div>
-                                        </div>
+                                        </div>-->
 
                                         <!-- CARD TEMPLATE
                                         <div class="card">
