--- a/portfolio.html
+++ b/portfolio.html
@@ -1,66 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./style.css">
-        <title>Portfolio</title>
-    </head>
-    <body class="bg-dark">
-        <header>
-            <div class="d-flex justify-content-center">
-                <h1 class="bg-dark text-light">Johnny Li</h1>
-            </div>
-        </header>
-        <nav class="nav navbar-light bg-light justify-content-center"> 
-            <a class="nav-link text-dark" href="index.html">About Me</a>
-            <a class="nav-link text-dark" href="portfolio.html">Portfolio</a>
-            <a class="nav-link text-dark" href="contact.html">Contact</a>
-        </nav>
-        <main class="container">
-            <article class="card mt-4">
-                <div class="card-body">
-                    <div class="row"> 
-                        <div class="col-lg-12">
-                            <h2 class="text-dark card-title">Portfolio</h2>
-                            <hr>
-                        </div>
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <script src="https://use.fontawesome.com/0d608d6dda.js"></script>
+    <title>Portfolio</title>
+</head>
+
+<body class="bg-dark">
+    <header>
+        <div class="d-flex justify-content-center">
+            <h1 class="bg-dark text-light">Johnny Li</h1>
+        </div>
+    </header>
+    <nav class="nav navbar-light bg-light justify-content-center">
+        <a class="nav-link text-dark" href="index.html">About Me</a>
+        <a class="nav-link text-dark" href="portfolio.html">Portfolio</a>
+        <a class="nav-link text-dark" href="contact.html">Contact</a>
+    </nav>
+    <main class="container">
+        <article class="card mt-4">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2 class="text-dark card-title">Portfolio</h2>
+                        <hr>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="container">
-                                <div class="row">
-                                    
-                                    <div class="col-lg-4 mb-5">
-                                        <img src="Assets/Images/purplepages.png" class="card-img-top" alt="screenshot">
-                                        <div class="card-body bg-dark">
-                                            <a href="https://reptile18.github.io/Purple-Pages/index.html" class="stretched-link">
-                                                <h3 class="card-title text-light">Purple Pages</h3>
-                                                <h4 class="card-subtitle text-light">Web Entertainment App</h4>
-                                            </a>
-                                        </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="container">
+                            <div class="row">
+
+                                <div class="col-lg-4 mb-5">
+                                    <img src="Assets/Images/covidcanidoit.png" class="card-img-top" alt="screenshot">
+                                    <div class="card-body bg-dark">
+                                        <a href="https://covidcanidoit.com/" class="stretched-link">
+                                            <h3 class="card-title text-light">Covid - Can I do it?</h3>
+                                            <h6 class="card-subtitle text-light">Risk Assessment App</h6>
+                                        </a>
                                     </div>
-                                    <div class="col-lg-4 mb-5">
-                                        <img src="Assets/Images/workdayscheduler.png" class="card-img-top border" alt="screenshot">
-                                        <div class="card-body bg-dark">
-                                            <a href="https://reptile18.github.io/Work-Day-Scheduler/Develop/index.html" class="stretched-link">
-                                                <h3 class="card-title text-light">Work Day Scheduler</h3>
-                                                <h4 class="card-subtitle text-light">Time Keeping App</h4>
-                                            </a>
-                                        </div>
+                                </div>
+
+                                <div class="col-lg-4 mb-5">
+                                    <img src="Assets/Images/purplepages.png" class="card-img-top" alt="screenshot">
+                                    <div class="card-body bg-dark">
+                                        <a href="https://reptile18.github.io/Purple-Pages/index.html"
+                                            class="stretched-link">
+                                            <h3 class="card-title text-light">Purple Pages</h3>
+                                            <h6 class="card-subtitle text-light">Web Entertainment App</h6>
+                                        </a>
                                     </div>
-                                    <div class="col-lg-4 mb-5">
-                                        <img src="Assets/Images/weatherdashboard.png" class="card-img-top" alt="screenshot">
-                                        <div class="card-body bg-dark">
-                                            <a href="https://reptile18.github.io/Weather-Dashboard/" class="stretched-link">
-                                                <h3 class="card-title text-light">Weather Dashboard</h3>
-                                                <h4 class="card-subtitle text-light">Local Weather App</h4>
-                                            </a>
-                                        </div>
+                                </div>
+                                <div class="col-lg-4 mb-5">
+                                    <img src="Assets/Images/workdayscheduler.png" class="card-img-top border"
+                                        alt="screenshot">
+                                    <div class="card-body bg-dark">
+                                        <a href="https://reptile18.github.io/Work-Day-Scheduler/Develop/index.html"
+                                            class="stretched-link">
+                                            <h3 class="card-title text-light">Work Day Scheduler</h3>
+                                            <h6 class="card-subtitle text-light">Time Keeping App</h6>
+                                        </a>
                                     </div>
-                                        <!--<div class="col-lg-4 mb-5">
+                                </div>
+                                <div class="col-lg-4 mb-5">
+                                    <img src="Assets/Images/weatherdashboard.png" class="card-img-top" alt="screenshot">
+                                    <div class="card-body bg-dark">
+                                        <a href="https://reptile18.github.io/Weather-Dashboard/" class="stretched-link">
+                                            <h3 class="card-title text-light">Weather Dashboard</h3>
+                                            <h6 class="card-subtitle text-light">Local Weather App</h6>
+                                        </a>
+                                    </div>
+                                </div>
+                                <!--<div class="col-lg-4 mb-5">
                                             <img src="Assets/Images/cvstimcalc.png" class="card-img-top" alt="screenshot">
                                             <div class="card-body bg-dark">
                                                 <a href="https://reptile18.github.io/CVStimCalc/" class="stretched-link">
@@ -97,7 +122,7 @@
                                             </div>
                                         </div>-->
 
-                                        <!-- CARD TEMPLATE
+                                <!-- CARD TEMPLATE
                                         <div class="card">
                                             <img src="https://placehold.it/160x90" class="card-img-top" alt="screenshot">
                                             <div class="card-body bg-dark">
@@ -107,16 +132,42 @@
                                             </div>
                                         </div>
                                         -->
-                                    
-                                </div>
+
                             </div>
                         </div>
                     </div>
                 </div>
-            </article>
-        </main>
-        <footer class="fixed-bottom page-footer bg-light text-dark font-small ">
-            <div class="footer-copyright text-center py-3">© Copyright</div>
-        </footer>
-    </body>
+            </div>
+        </article>
+    </main>
+    <footer class="fixed-bottom page-footer bg-light text-dark font-small ">
+        <div class="d-flex justify-content-center">
+            <h3 class="mt-3">
+                <a class="mr-3" href="https://github.com/reptile18">
+                    <i class="fab fa-github-square text-dark"></i>
+                </a>
+
+                <a class="mr-3" href="https://www.linkedin.com/in/johnny-li-031b949/">
+                    <i class="fab fa-linkedin-square text-dark"></i>
+                </a>
+
+                <a class="mr-3" href="https://www.facebook.com/johnny.li.144">
+                    <i class="fab fa-facebook-square text-dark"></i>
+                </a>
+
+                <a class="mr-3" href="https://twitter.com/hotreptile18">
+                    <i class="fab fa-twitter-square text-dark"></i>
+                </a>
+
+                <a class="mr-3" href="https://www.instagram.com/johnnyli8004/">
+                    <!--<i class="fab fa-instagram-square text-dark"></i>-->
+                    <!-- this icon doesn't seem to be available yet -->
+                    <i class="fab fa-instagram text-dark"></i>
+                </a>
+            </h3>
+        </div>
+        <div class="footer-copyright text-center py-3">© Copyright</div>
+    </footer>
+</body>
+
 </html>
