--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
         </article> <!-- card -->
     </main>
     <footer class="fixed-bottom page-footer bg-light text-dark font-small ">
-
         <div class="d-flex justify-content-center">
             <h3 class="mt-3">
                 <a class="mr-3" href="https://github.com/reptile18">
@@ -76,7 +75,8 @@
                 </a>
 
                 <a class="mr-3" href="https://www.instagram.com/johnnyli8004/">
-                    <!--<i class="fab fa-instagram-square text-dark"></i>--> <!-- this icon doesn't seem to be available yet -->
+                    <!--<i class="fab fa-instagram-square text-dark"></i>-->
+                    <!-- this icon doesn't seem to be available yet -->
                     <i class="fab fa-instagram text-dark"></i>
                 </a>
             </h3>
