add link to issue for instagram-square icon

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                 <a class="mr-3" href="https://www.instagram.com/johnnyli8004/">
                     <!--<i class="fab fa-instagram-square text-dark"></i>-->
-                    <!-- this icon doesn't seem to be available yet -->
+                    <!-- this icon doesn't seem to be available yet (https://github.com/FortAwesome/Font-Awesome/issues/16674)-->
                     <i class="fab fa-instagram text-dark"></i>
                 </a>
             </h3>
