--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-    <script src="https://use.fontawesome.com/0d608d6dda.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
+        integrity="" crossorigin="anonymous" />
     <title>About Me</title>
 </head>
 
@@ -63,7 +62,7 @@
                 </a>
 
                 <a class="mr-3" href="https://www.linkedin.com/in/johnny-li-031b949/">
-                    <i class="fab fa-linkedin-square text-dark"></i>
+                    <i class="fab fa-linkedin text-dark"></i>
                 </a>
 
                 <a class="mr-3" href="https://www.facebook.com/johnny.li.144">
@@ -75,9 +74,7 @@
                 </a>
 
                 <a class="mr-3" href="https://www.instagram.com/johnnyli8004/">
-                    <!--<i class="fab fa-instagram-square text-dark"></i>-->
-                    <!-- this icon doesn't seem to be available yet (https://github.com/FortAwesome/Font-Awesome/issues/16674)-->
-                    <i class="fab fa-instagram text-dark"></i>
+                    <i class="fab fa-instagram-square text-dark"></i>
                 </a>
             </h3>
         </div>
