--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,9 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-    <script src="https://use.fontawesome.com/0d608d6dda.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
+        integrity="" crossorigin="anonymous" />
+    <!--<script src="https://use.fontawesome.com/0d608d6dda.js"></script>-->
     <title>Portfolio</title>
 </head>
 
@@ -46,7 +46,9 @@
                             <div class="row">
 
                                 <div class="col-lg-4 mb-5">
-                                    <img src="Assets/Images/covidcanidoit.png" class="card-img-top" alt="screenshot">
+                                    <div class="card-img-container">
+                                        <img src="Assets/Images/covidcanidoit.png" class="card-img-top" alt="screenshot">
+                                    </div>
                                     <div class="card-body bg-dark">
                                         <a href="https://covidcanidoit.com/" class="stretched-link">
                                             <h3 class="card-title text-light">Covid - Can I do it?</h3>
@@ -85,53 +87,6 @@
                                         </a>
                                     </div>
                                 </div>
-                                <!--<div class="col-lg-4 mb-5">
-                                            <img src="Assets/Images/cvstimcalc.png" class="card-img-top" alt="screenshot">
-                                            <div class="card-body bg-dark">
-                                                <a href="https://reptile18.github.io/CVStimCalc/" class="stretched-link">
-                                                    <h3 class="card-title text-light">StimulusCalculator</h3>
-                                                    <h4 class="card-subtitle text-light">Bootstrap Web App</h4>
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-4 mb-5">
-                                            <img src="Assets/Images/Tom_the_Vegetarian_480x270.png" class="card-img-top" alt="screenshot">
-                                            <div class="card-body bg-dark">
-                                                <a href="https://johnnysdabblings.code.blog/category/tom-the-vegetarian/" class="stretched-link">
-                                                    <h3 class="card-title text-light">Tom the Vegetarian</h3>
-                                                    <h4 class="card-subtitle text-light">Mobile Game</h4>
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-4 mb-5">
-                                            <img src="Assets/Images/Redshift_50_perc.png" class="card-img-top" alt="screenshot">
-                                            <div class="card-body bg-dark">
-                                                <a href="#" class="stretched-link">
-                                                    <h3 class="card-title text-light">Redshift</h3>
-                                                    <h4 class="card-subtitle text-light">Mobile Game</h4>
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-4 mb-5">
-                                            <img src="Assets/Images/pottedplant.png" class="card-img-top" alt="screenshot">
-                                            <div class="card-body bg-dark">
-                                                <a href="https://github.com/reptile18/PythonDjangoReactDemo" class="stretched-link">
-                                                    <h3 class="card-title text-light">React Demo</h3>
-                                                    <h4 class="card-subtitle text-light">Python React Web App</h4>
-                                                </a>
-                                            </div>
-                                        </div>-->
-
-                                <!-- CARD TEMPLATE
-                                        <div class="card">
-                                            <img src="https://placehold.it/160x90" class="card-img-top" alt="screenshot">
-                                            <div class="card-body bg-dark">
-                                                <a href="#" class="stretched-link">
-                                                    <h3 class="card-title text-light">Project</h3>
-                                                </a>
-                                            </div>
-                                        </div>
-                                        -->
 
                             </div>
                         </div>
@@ -160,9 +115,9 @@
                 </a>
 
                 <a class="mr-3" href="https://www.instagram.com/johnnyli8004/">
-                    <!--<i class="fab fa-instagram-square text-dark"></i>-->
+                    <i class="fab fa-instagram-square text-dark"></i>
                     <!-- this icon doesn't seem to be available yet (https://github.com/FortAwesome/Font-Awesome/issues/16674)-->
-                    <i class="fab fa-instagram text-dark"></i>
+                    <!--<i class="fab fa-instagram text-dark"></i>-->
                 </a>
             </h3>
         </div>
