--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
         integrity="" crossorigin="anonymous" />
-    <!--<script src="https://use.fontawesome.com/0d608d6dda.js"></script>-->
     <title>Portfolio</title>
 </head>
 
@@ -103,7 +102,7 @@
                 </a>
 
                 <a class="mr-3" href="https://www.linkedin.com/in/johnny-li-031b949/">
-                    <i class="fab fa-linkedin-square text-dark"></i>
+                    <i class="fab fa-linkedin text-dark"></i>
                 </a>
 
                 <a class="mr-3" href="https://www.facebook.com/johnny.li.144">
@@ -116,8 +115,6 @@
 
                 <a class="mr-3" href="https://www.instagram.com/johnnyli8004/">
                     <i class="fab fa-instagram-square text-dark"></i>
-                    <!-- this icon doesn't seem to be available yet (https://github.com/FortAwesome/Font-Awesome/issues/16674)-->
-                    <!--<i class="fab fa-instagram text-dark"></i>-->
                 </a>
             </h3>
         </div>
